--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "json-api-sample",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.16.1"
+  },
   "description": "",
   "main": "app.js",
   "scripts": {
